# log-processing-pipeline

./: .gitignore  CMakeLists.txt  README.md
include/pipeline/: aggregator.h  filter.h  log_entry.h  parser.h  reader.h  thread_safe_queue.h
src/: aggregator.cpp  filter.cpp  main.cpp  parser.cpp  reader.cpp
tests/: queue_test.cpp
